Исправление в форматирвании текста
Приводило к не возможности посмотреть информацию о подписи APK в русском переводе

--- a/i18n/Messages_ru_RU.properties
+++ b/i18n/Messages_ru_RU.properties
@@ -65,7 +65,7 @@ message.userCancelTask=задача была отменена пользоват
 message.memoryLow=jadx работает с малой оперативной памятью. Пожалуйста, перезапустите с увеличением максимального размера оперативной памяти.
 message.taskError=Задача не удалась с ошибкой (для получения подробной информации проверьте журнал).
 message.errorTitle=ошибка
-message.load_errors=Загрузка Провалилась
+message.load_errors=Загрузка Провалилась.\nОшибок: %d\n"Нажмите OK, чтобы открыть просмотр журнала"
 message.no_classes=без загрузки классов, нечего декомпилировать!
 
 message.saveIncomplete=<html> Сохранить неполный. <br> %s <br> %d классы или ресурсы не были сохранены! </html>
@@ -92,7 +92,7 @@ search_dialog.options=параметры поиска:
 search_dialog.ignorecase=case нечувствительный
 search_dialog.next_page=показывать следующую страницу
 search_dialog.prev_page=Показать предыдущую страницу
-search_dialog.info_label=показывать результаты %1 $ d до %2 $ d %3 $ d
+search_dialog.info_label=показывать результаты %1$d до %2$d из %3$d
 search_dialog.col_node=node
 search_dialog.col_code=code
 search_dialog.regex=regex
@@ -184,20 +184,20 @@ msg.project_error=проект не может быть загружен
 msg.cmd_select_class_error=не удалось выбрать класс \n%s \n. Класс не существует.
 msg.cant_add_comment=не могу добавить комментарий здесь
 
-popup.bytecode_col=show dalvik bytecode
-popup.line_wrap=line wrap
+popup.bytecode_col=Покозать dalvik bytecode
+popup.line_wrap=линейная обертка
 popup.undo=отменить
 popup.redo=делать вновь
 popup.cut=Резать
 popup.copy=Копировать
 popup.paste=Вставить
-popup.delete=delete
+popup.delete=Удалить
 popup.select_all=выберите все
 popup.frida=копия как фрагмент Frida
-popup.xposed=копия как xposed funppet
+popup.xposed=копия как фрагмент xposed
 popup.find_usage=найти использование
 popup.go_to_declaration=перейти к объявлению
-popup.exclude=Иссекание
+popup.exclude=Исключить
 popup.exclude_packages=Исключить пакеты
 popup.add_comment=Комментарий
 popup.search_comment=Комментарии поиска
@@ -231,13 +231,13 @@ certificate.serialSigOID=подпись OID
 certificate.serialMD5=отпечаток пальца MD5
 certificate.serialSHA1=отпечаток пальцев Sha-1
 certificate.serialSHA256=Sha-256
-certificate.serialPubKeyY=y
+certificate.serialPubKeyY=Y
 
-apkSignature.signer=подписав
+apkSignature.signer=подписать
 apkSignature.verificationSuccess=проверка подписи
 apkSignature.verificationFailed=Проверка подписи.
-apkSignature.signatureSuccess=допустимая подпись APK % найдено
-apkSignature.signatureFailed=недопустимая подпись APK V%d найдено
+apkSignature.signatureSuccess=Найдена допустимая подпись APK V%d
+apkSignature.signatureFailed=Найдена недопустимая подпись APK V%d
 apkSignature.errors=ошибки
 apkSignature.warnings=предупреждения
 apkSignature.exception=apk проверка не удалась
